<resources>
    <string name="app_name">Kotlin Practice</string>
    <string name="movie_title">Movie Title</string>
    <string name="rating">Rating:</string>
    <string name="max_rating"> / 10</string>
    <string name="adult_mark">R</string>
    <string name="your_rating">Your rating:</string>
    <string name="watched">Watched</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="filter_settings">Filter settings</string>
    <string name="hide_adult_content">Hide adult content</string>
    <string name="show_watched">Show watched movies</string>
    <string name="needs_restart">Needs restart</string>
</resources>